[package]
name = "fsbex"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
description = "Library for extracting audio from FMOD sound banks"
readme = "README.md"
repository = "https://github.com/astral4/fsbex"
license = "MIT OR Apache-2.0"
keywords = ["audio", "datamining", "fmod"]
categories = ["encoding", "multimedia::audio", "multimedia::encoding", "no-std", "parser-implementations"]

[dependencies]
