[package]
name = "fsbex"
version = "0.2.0"
authors = ["astral4"]
edition = "2021"
description = "Library for extracting audio from FMOD sound banks"
readme = "README.md"
repository = "https://github.com/astral4/fsbex"
license = "MIT OR Apache-2.0"
keywords = ["audio", "datamining", "fmod"]
categories = ["encoding", "multimedia::audio", "multimedia::encoding", "parser-implementations"]

[dependencies]
bilge = "0.1.5"
lewton = { version = "0.10.2", default-features = false }
phf = { version = "0.11.2", features = ["macros"] }
vorbis_rs = "0.3.0"
