[package]
name = "fsbex"
version = "0.3.0"
authors = ["astral4"]
edition = "2021"
description = "Library for extracting audio from FMOD sound banks"
readme = "README.md"
repository = "https://github.com/astral4/fsbex"
license = "MIT OR Apache-2.0"
keywords = ["audio", "datamining", "fmod"]
categories = ["encoding", "multimedia::audio", "multimedia::encoding", "parser-implementations"]

[dependencies]
bilge = "0.2.0"
lewton = { version = "0.10.2", default-features = false }
phf = { version = "0.11.2", features = ["macros"] }
tap = "1.0.1"
vorbis_rs = "0.5.4"

[lints.rust]
future_incompatible = "warn"
unused = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
non_ascii_idents = "deny"
nonstandard_style = "deny"
noop_method_call = "deny"
rust_2018_idioms = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
unused_tuple_struct_fields = "deny"

[lints.clippy]
pedantic = "warn"
enum_glob_use = "allow"
module_name_repetitions = "allow"
unusual_byte_groupings = "allow"

# [profile.release]
# panic = "abort"
# codegen-units = 1
# lto = true
# strip = true

[profile.release]
codegen-units = 1
lto = true
# debug = true
